GNOME Bugzilla – Bug 738010
tui: fix some valgrind warnings
Last modified: 2014-10-07 14:02:14 UTC
nmt_newt_grid_size_allocate() depends on nmt_newt_grid_size_request() having been called immediately prior, which would normally be true, except that NmtNewtSection adjusts the label widgets in its border to match its allocation, so when its size changes, it will end up calling size_allocate() on the border with out-of-date requisition data. Fix that by re-size_requesting the border after modifying it.
Created attachment 287856 [details] [review] tui: fix some valgrind warnings
Looks good to me. allocate() clearly depends on stuff that size_request() sets.
Attachment 287856 [details] pushed as 4f9f33f - tui: fix some valgrind warnings